--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,11 @@ jobs:
         
       - uses: yukiarrr/ios-build-action@v1.5.0
         with:
-          project-path: Unity-iPhone.xcodeproj
+          project-path: merchandiseios.xcodeproj
           p12-base64: ${{ secrets.P12_BASE64 }}
           mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
           code-signing-identity: ${{ secrets.CODE_SIGNING_IDENTITY }}
           ertificate-password: "123456"
           team-id: ${{ secrets.TEAM_ID }}
-          workspace-path: Unity-iPhone.xcworkspace # optional
+          #workspace-path: Unity-iPhone.xcworkspace # optional
+
